--- a/index.html
+++ b/index.html
@@ -4,54 +4,59 @@
   <meta charset="UTF-8">
   <title>Yesco Gráfica Total</title>
   <style>
-    body { font: 16px sans-serif; padding: 20px }
-    #total { font-size: 2rem; margin: 20px 0 }
-    #contador { font-size: 1.2rem; color: gray }
+    body { font-family: sans-serif; padding: 20px; text-align: center; background: #f5f5f5; }
+    h1 { margin-bottom: 10px; }
+    #total { font-size: 2rem; margin: 20px 0; color: #111; }
+    #contador { font-size: 1.2rem; color: gray; margin-top: 10px; }
   </style>
 </head>
 <body>
-  <h1>Total valor cartas GRL (104‑109)</h1>
-  <div id="total">Cargando...</div>
+  <h1>Yesco Gráfica Total</h1>
+  <div id="total">Cargando valor total...</div>
   <div id="contador">Actualización en: --:--:--</div>
+
   <script>
+    const proxyURL = "https://yesco-proxy.fly.dev/total"; // puente listo
+
     const formatNumber = n => n.toLocaleString('es-PE');
-    const fetchPrices = async () => {
-      const res = await fetch(
-        'https://renderz.app/api/players?auctionable=true&min_rating=104&max_rating=109'
-      );
-      const data = await res.json();
-      return data.map(p => p.value);
-    };
 
-    let segundosRest = 3600;
-
-    async function actualizar() {
+    async function obtenerTotal() {
       try {
-        const values = await fetchPrices();
-        const suma = values.reduce((a,b)=>a+b, 0);
-        document.getElementById('total').textContent = `S/. ${formatNumber(suma)}`;
+        const res = await fetch(proxyURL);
+        const data = await res.json();
+        const total = data.total;
+        document.getElementById('total').textContent = `S/. ${formatNumber(total)}`;
       } catch (e) {
         document.getElementById('total').textContent = 'Error al cargar datos';
         console.error(e);
       }
     }
 
+    function segundosHastaProximaHoraPeru() {
+      const ahora = new Date();
+      const utc = ahora.getTime() + (ahora.getTimezoneOffset() * 60000);
+      const lima = new Date(utc - (5 * 60 * 60 * 1000)); // UTC-5
+      const minutosRest = 59 - lima.getMinutes();
+      const segundosRest = 59 - lima.getSeconds();
+      return (minutosRest * 60) + segundosRest + 1;
+    }
+
     function iniciarContador() {
-      setInterval(() => {
-        segundosRest--;
-        if (segundosRest <= 0) {
-          actualizar();
-          segundosRest = 3600;
+      let segundos = segundosHastaProximaHoraPeru();
+      const intervalo = setInterval(() => {
+        segundos--;
+        if (segundos <= 0) {
+          obtenerTotal();
+          segundos = 3600;
         }
-        const h = String(Math.floor(segundosRest/3600)).padStart(2,'0');
-        const m = String(Math.floor((segundosRest%3600)/60)).padStart(2,'0');
-        const s = String(segundosRest%60).padStart(2,'0');
+        const h = String(Math.floor(segundos / 3600)).padStart(2, '0');
+        const m = String(Math.floor((segundos % 3600) / 60)).padStart(2, '0');
+        const s = String(segundos % 60).padStart(2, '0');
         document.getElementById('contador').textContent = `Actualización en: ${h}:${m}:${s}`;
       }, 1000);
     }
 
-    // Ejecutar al cargar
-    actualizar();
+    obtenerTotal();
     iniciarContador();
   </script>
 </body>
