--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div id="contador">Actualización en: --:--:--</div>
 
   <script>
-    const proxyURL = "https://yesco-proxy.vercel.app/api/total"; // nuevo proxy
+    const proxyURL = "https://yesco-proxy.fly.dev/total"; // nuevo proxy activo
 
     const formatNumber = n => n.toLocaleString('es-PE');
 
