--- a/index.html
+++ b/index.html
@@ -31,13 +31,11 @@
   <div id="contador">Actualización en: --:--:--</div>
 
   <script>
-    const proxyURL = "https://yesco-replit-proxy.alessandrobot.repl.co/total";
-
     const formatNumber = n => n.toLocaleString('es-PE');
 
     async function obtenerTotal() {
       try {
-        const res = await fetch(proxyURL);
+        const res = await fetch("https://yesco-proxy.onrender.com/total.json");
         const data = await res.json();
         const total = data.total;
         document.getElementById('total').textContent = `S/. ${formatNumber(total)}`;
@@ -58,7 +56,7 @@
 
     function iniciarContador() {
       let segundos = segundosHastaProximaHoraPeru();
-      const intervalo = setInterval(() => {
+      setInterval(() => {
         segundos--;
         if (segundos <= 0) {
           obtenerTotal();
