--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     async function obtenerTotal() {
       try {
-        const res = await fetch("https://yesco-proxy.onrender.com/total.json");
+        const res = await fetch("https://yesco-data.onrender.com/total.json");
         const data = await res.json();
         const total = data.total;
         document.getElementById('total').textContent = `S/. ${formatNumber(total)}`;
