--- a/index.html
+++ b/index.html
@@ -1,76 +1,65 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Yesco Gráfica Total</title>
   <style>
     body {
-      font-family: sans-serif;
-      padding: 20px;
+      font-family: Arial, sans-serif;
       text-align: center;
-      background: #f5f5f5;
+      padding: 40px;
+      background-color: #111;
+      color: #fff;
     }
     h1 {
+      font-size: 2em;
       margin-bottom: 10px;
     }
-    #total {
-      font-size: 2rem;
+    #valor {
+      font-size: 2.5em;
       margin: 20px 0;
-      color: #111;
     }
-    #contador {
-      font-size: 1.2rem;
-      color: gray;
-      margin-top: 10px;
+    #reloj {
+      font-size: 1em;
+      opacity: 0.8;
     }
   </style>
 </head>
 <body>
-  <h1>Yesco Gráfica Total</h1>
-  <div id="total">Cargando valor total...</div>
-  <div id="contador">Actualización en: --:--:--</div>
+  <h1>💠 Yesco Gráfica Total 💠</h1>
+  <div id="valor">Cargando valor...</div>
+  <div id="reloj">Actualizando en: --:--</div>
 
   <script>
-    const formatNumber = n => n.toLocaleString('es-PE');
+    const url = "https://script.google.com/macros/s/AKfycbz5ElwO_kZPXxVIkZg97l8oPwU-kTfl4HJWdo8SIBqLzKGyLtYigK8z9qdYkAtqLqsw/exec";
 
-    async function obtenerTotal() {
+    async function cargarDatos() {
       try {
-        const res = await fetch("https://script.google.com/macros/s/AKfycbxrJxKZ-n2Mm6p5ztT8N2s0Ll8V-Wkxks7mNYYbHACa_cLxQbfkn8Ywl-dSDD8MaEYi/exec");
+        const res = await fetch(url);
         const data = await res.json();
-        const total = data.total;
-        document.getElementById('total').textContent = `S/. ${formatNumber(total)}`;
-      } catch (e) {
-        document.getElementById('total').textContent = 'Error al cargar datos';
-        console.error(e);
+        const totalFormateado = new Intl.NumberFormat("es-PE").format(data.total);
+        document.getElementById("valor").textContent = `Valor total: ${totalFormateado} monedas`;
+      } catch (error) {
+        document.getElementById("valor").textContent = "❌ Error al cargar los datos";
       }
     }
 
-    function segundosHastaProximaHoraPeru() {
+    function actualizarContador() {
       const ahora = new Date();
-      const utc = ahora.getTime() + (ahora.getTimezoneOffset() * 60000);
-      const lima = new Date(utc - (5 * 60 * 60 * 1000));
-      const minutosRest = 59 - lima.getMinutes();
-      const segundosRest = 59 - lima.getSeconds();
-      return (minutosRest * 60) + segundosRest + 1;
+      const lima = new Date(ahora.toLocaleString("en-US", { timeZone: "America/Lima" }));
+      const minutosRestantes = 59 - lima.getMinutes();
+      const segundosRestantes = 59 - lima.getSeconds();
+
+      const mm = minutosRestantes.toString().padStart(2, "0");
+      const ss = segundosRestantes.toString().padStart(2, "0");
+
+      document.getElementById("reloj").textContent = `Actualizando en: ${mm}:${ss}`;
     }
 
-    function iniciarContador() {
-      let segundos = segundosHastaProximaHoraPeru();
-      setInterval(() => {
-        segundos--;
-        if (segundos <= 0) {
-          obtenerTotal();
-          segundos = 3600;
-        }
-        const h = String(Math.floor(segundos / 3600)).padStart(2, '0');
-        const m = String(Math.floor((segundos % 3600) / 60)).padStart(2, '0');
-        const s = String(segundos % 60).padStart(2, '0');
-        document.getElementById('contador').textContent = `Actualización en: ${h}:${m}:${s}`;
-      }, 1000);
-    }
-
-    obtenerTotal();
-    iniciarContador();
+    cargarDatos();
+    setInterval(cargarDatos, 3600000); // Cada hora
+    setInterval(actualizarContador, 1000);
   </script>
 </body>
 </html>
