--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div id="reloj">Actualizando en: --:--</div>
 
   <script>
-    const url = "https://script.google.com/macros/s/AKfycbz5ElwO_kZPXxVIkZg97l8oPwU-kTfl4HJWdo8SIBqLzKGyLtYigK8z9qdYkAtqLqsw/exec";
+    const url = "https://yesco-total.web.app/total.json";
 
     async function cargarDatos() {
       try {
