--- a/index.html
+++ b/index.html
@@ -1,65 +1,4 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Yesco Gráfica Total</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 40px;
-      background-color: #111;
-      color: #fff;
-    }
-    h1 {
-      font-size: 2em;
-      margin-bottom: 10px;
-    }
-    #valor {
-      font-size: 2.5em;
-      margin: 20px 0;
-    }
-    #reloj {
-      font-size: 1em;
-      opacity: 0.8;
-    }
-  </style>
-</head>
-<body>
-  <h1>💠 Yesco Gráfica Total 💠</h1>
-  <div id="valor">Cargando valor...</div>
-  <div id="reloj">Actualizando en: --:--</div>
-
-  <script>
-    const url = "https://yesco-total.web.app/total.json";
-
-    async function cargarDatos() {
-      try {
-        const res = await fetch(url);
-        const data = await res.json();
-        const totalFormateado = new Intl.NumberFormat("es-PE").format(data.total);
-        document.getElementById("valor").textContent = `Valor total: ${totalFormateado} monedas`;
-      } catch (error) {
-        document.getElementById("valor").textContent = "❌ Error al cargar los datos";
-      }
-    }
-
-    function actualizarContador() {
-      const ahora = new Date();
-      const lima = new Date(ahora.toLocaleString("en-US", { timeZone: "America/Lima" }));
-      const minutosRestantes = 59 - lima.getMinutes();
-      const segundosRestantes = 59 - lima.getSeconds();
-
-      const mm = minutosRestantes.toString().padStart(2, "0");
-      const ss = segundosRestantes.toString().padStart(2, "0");
-
-      document.getElementById("reloj").textContent = `Actualizando en: ${mm}:${ss}`;
-    }
-
-    cargarDatos();
-    setInterval(cargarDatos, 3600000); // Cada hora
-    setInterval(actualizarContador, 1000);
-  </script>
-</body>
-</html>
+<div id="indice-oportunidad">
+  <h2>📉 Índice de Oportunidad</h2>
+  <div id="estado" style="font-size: 2em; color: green;">🟢 Oportunidad de Compra</div>
+</div>
