--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Yesco Gráfica Total</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
     html {
       scroll-behavior: smooth;
@@ -14,8 +15,7 @@
       margin: 0;
       font-family: 'Poppins', sans-serif;
       color: white;
-      background: url('https://i.imgur.com/Qik8ZdS.jpeg') no-repeat center center fixed;
-      background-size: cover;
+      background: linear-gradient(135deg, #000000, #3a0ca3);
     }
 
     .container {
@@ -63,6 +63,28 @@
 
     .rango {
       font-size: 1.3rem;
+    }
+
+    .redes {
+      text-align: center;
+      margin-top: 3rem;
+    }
+
+    .redes a {
+      margin: 0 15px;
+      font-size: 2rem;
+      color: white;
+      transition: color 0.3s;
+    }
+
+    .redes a:hover {
+      color: #a15eff;
+    }
+
+    .footer-text {
+      margin-top: 1rem;
+      font-size: 0.9rem;
+      color: #bbb;
     }
   </style>
 </head>
@@ -118,6 +140,19 @@
         </tr>
       </tbody>
     </table>
+
+    <!-- Redes Sociales -->
+    <div class="redes">
+      <h2>📱 Sígueme en Redes Sociales</h2>
+      <a href="https://www.youtube.com/@Yesconix" target="_blank" title="YouTube">
+        <i class="fab fa-youtube"></i>
+      </a>
+      <a href="https://www.tiktok.com/@Yesconix" target="_blank" title="TikTok">
+        <i class="fab fa-tiktok"></i>
+      </a>
+      <div class="footer-text">Yesco Gráfica Total © 2025</div>
+    </div>
+
   </div>
 
   <script>
