--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <a href="https://www.tiktok.com/@Yesconix" target="_blank" title="TikTok">
         <i class="fab fa-tiktok"></i>
       </a>
-      <div class="footer-text">Yesco Gráfica Total © 2025</div>
+      <div class="footer-text">Yesconix 🐐© 2025</div>
     </div>
 
   </div>
