--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
-    html {
-      scroll-behavior: smooth;
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'Poppins', sans-serif;
+      background-color: #0a0f2c;
+      color: white;
     }
 
     body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      color: white;
-      background: linear-gradient(135deg, #000000, #3a0ca3);
+      display: flex;
+      flex-direction: column;
     }
 
     .container {
+      flex: 1;
       padding: 2rem;
-      background-color: rgba(0, 0, 0, 0.75);
+      background-color: rgba(0, 0, 0, 0.65);
       min-height: 100vh;
     }
 
@@ -33,6 +37,7 @@
       font-size: 2em;
       text-align: center;
       margin-bottom: 2rem;
+      transition: all 0.4s ease;
     }
 
     table {
@@ -40,7 +45,7 @@
       margin-top: 2rem;
       border-collapse: collapse;
       font-size: 1.1rem;
-      background-color: rgba(30, 30, 30, 0.95);
+      background-color: rgba(30, 30, 60, 0.95);
       border-radius: 12px;
       overflow: hidden;
       color: white;
@@ -53,12 +58,16 @@
     }
 
     th {
-      background-color: #222;
+      background-color: #161a3d;
       font-weight: 600;
     }
 
+    tr {
+      transition: background-color 0.3s ease;
+    }
+
     tr:hover {
-      background-color: rgba(255, 255, 255, 0.1);
+      background-color: rgba(255, 255, 255, 0.07);
     }
 
     .rango {
@@ -74,11 +83,13 @@
       margin: 0 15px;
       font-size: 2rem;
       color: white;
-      transition: color 0.3s;
+      transition: transform 0.3s ease, color 0.3s ease;
+      display: inline-block;
     }
 
     .redes a:hover {
       color: #a15eff;
+      transform: scale(1.2);
     }
 
     .footer-text {
@@ -93,7 +104,7 @@
 
     <!-- Índice de oportunidad -->
     <h2>📉 Índice de Oportunidad</h2>
-    <div id="estado">Cargando...</div>
+    <div id="estado"></div>
 
     <!-- Subtítulo -->
     <h1>💰 Guía de Tradeos para Ganar Monedas en FC Mobile</h1>
@@ -150,13 +161,12 @@
       <a href="https://www.tiktok.com/@Yesconix" target="_blank" title="TikTok">
         <i class="fab fa-tiktok"></i>
       </a>
-      <div class="footer-text">Yesconix 🐐© 2025</div>
+      <div class="footer-text">Yesco Gráfica Total © 2025</div>
     </div>
 
   </div>
 
   <script>
-    // Cargar índice de oportunidad
     async function cargarIndice() {
       try {
         const res = await fetch("https://yesco-total.web.app/indice.json");
@@ -172,13 +182,10 @@
         } else if (data.oportunidad === "baja") {
           estado.textContent = "🔴 Mercado Alto (no comprar)";
           estado.style.color = "crimson";
-        } else {
-          estado.textContent = "⚪ No disponible";
-          estado.style.color = "gray";
         }
       } catch (err) {
-        document.getElementById("estado").textContent = "❌ Error al cargar el índice";
-        console.error(err);
+        // Silenciar errores
+        console.warn("Índice no disponible.");
       }
     }
 
