--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     html, body {
       margin: 0;
       padding: 0;
+      min-height: 100%;
       height: 100%;
       font-family: 'Poppins', sans-serif;
       background-color: #0a0f2c;
@@ -24,8 +25,7 @@
     .container {
       flex: 1;
       padding: 2rem;
-      background-color: rgba(0, 0, 0, 0.65);
-      min-height: 100vh;
+      background: linear-gradient(to bottom, #0a0f2c 0%, #0a0f2c 100%);
     }
 
     h1, h2 {
@@ -161,7 +161,7 @@
       <a href="https://www.tiktok.com/@Yesconix" target="_blank" title="TikTok">
         <i class="fab fa-tiktok"></i>
       </a>
-      <div class="footer-text">Yesco Gráfica Total © 2025</div>
+      <div class="footer-text">Yesco 🐐</div>
     </div>
 
   </div>
@@ -184,7 +184,6 @@
           estado.style.color = "crimson";
         }
       } catch (err) {
-        // Silenciar errores
         console.warn("Índice no disponible.");
       }
     }
