--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
       flex: 1;
       padding: 2rem;
       background: linear-gradient(to bottom, #0a0f2c 0%, #0a0f2c 100%);
+      max-width: 900px;
+      margin: 0 auto;
     }
 
-    h1, h2 {
+    h1, h2, #estado {
       text-align: center;
       margin-bottom: 1.5rem;
     }
 
     #estado {
       font-size: 2em;
-      text-align: center;
-      margin-bottom: 2rem;
       transition: all 0.4s ease;
     }
 
